<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/orderinfo"
        android:id="@+id/tv_orderinfo"
        android:textSize="20pt"
        android:layout_alignBottom="@+id/btn_add2"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_below="@+id/btn_add2"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_name"
                android:id="@+id/tv_item"
                android:layout_column="1"
                android:textSize="15pt"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_num"
                android:id="@+id/tv_num"
                android:layout_column="3"
                android:textSize="15pt"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/price"
                android:id="@+id/tv_price"
                android:layout_column="5"
                android:textSize="15pt"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add2"
        android:layout_alignParentTop="true"
        android:src="@mipmap/btn_m"
        android:background="#FFFFFF"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_cancel"
        android:textSize="15pt"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tv_orderinfo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/button4"
        android:textSize="15pt"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btn_add2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_price"
        android:id="@+id/tv_total"
        android:textSize="15pt"
        android:layout_above="@+id/btn_cancel"
        android:layout_toStartOf="@+id/btn_cancel"
        android:layout_marginBottom="124dp" />

</RelativeLayout>
