<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_order"
        android:id="@+id/myorder_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20pt" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myorder_title"
        android:layout_centerHorizontal="true"
        android:id="@+id/tableLayout"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/store_name"
                android:id="@+id/tv_store_name"
                android:textSize="15pt" />
            <EditText
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/et_store_name"
                android:textSize="15pt" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/orderer"
                android:id="@+id/tv_orderer"
                android:textSize="15pt" />
            <EditText
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/et_orderer"
                android:textSize="15pt" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pickup_location"
                android:id="@+id/tv_pickup_location"
                android:textSize="15pt"
                android:layout_column="0" />
            <EditText
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/et_pickup_location"
                android:textSize="15pt" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dateline"
                android:id="@+id/tv_pickup_time"
                android:textSize="15pt"
                android:layout_column="0" />
            <EditText
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/et_pickup_time"
                android:textSize="15pt" />
        </TableRow>
<!--        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cost"
                android:id="@+id/textView6"
                android:textSize="15pt"
                android:layout_column="0" />
            <EditText
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/et_money"
                android:textSize="15pt" />
        </TableRow-->>

    </TableLayout>

    <Button
        android:text="@string/start_order"
        android:id="@+id/btn_startorder"
        android:layout_column="1"
        android:layout_width="100pt"
        android:layout_height="30pt"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:textSize="25dp" />
</RelativeLayout>